--- a/TODO
+++ b/TODO
@@ -1,1 +1,27 @@
 Make a script to automatically git clone zsh-syntax,zsh-history, and other files which I git clone
+
+
+Here are the GitHub links for the tools you mentioned, along with some notes:
+Neovim: https://github.com/neovim/neovim/releases/tag/v0.8.0
+Meld: https://github.com/GNOME/meld/releases/tag/3.20.4
+Python 3.6.1: https://github.com/python/cpython/releases/tag/v3.6.1
+Python 2.7.12: https://github.com/python/cpython/releases/tag/v2.7.12
+Ripgrep: https://github.com/BurntSushi/ripgrep/releases/tag/0.7.1
+fd: https://github.com/sharkdp/fd/releases/tag/v8.3.2
+Gzip: Not on GitHub, but source available at https://ftp.gnu.org/gnu/gzip/
+Evince: https://github.com/GNOME/evince/releases/tag/2.25.5
+Git: https://github.com/git/git/releases/tag/v2.9.2
+Git LFS: https://github.com/git-lfs/git-lfs/releases/tag/v3.3.0
+Autojump: https://github.com/wting/autojump/releases/tag/release-v22.5.1
+Ruby: https://github.com/ruby/ruby/releases/tag/v2_7_0
+xclip: https://github.com/astrand/xclip/releases/tag/0.12
+bat: https://github.com/sharkdp/bat/releases/tag/v0.23.0
+Notes:
+Some of these versions are quite old. Consider updating to newer versions for security and feature improvements.
+tkdiff doesn't have an official GitHub repository. It's typically distributed with Tcl/Tk.
+The "/home/nv/bin" path is likely specific to your system and not a GitHub project.
+To set up your own bin for each of these, you would typically:
+Download the release for your platform
+Extract it to a directory of your choice
+Add that directory to your PATH as you've done
+For some tools, you might need to compile from source, especially for older versions.
